index con cambios para test

--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	<figcaption></figcaption>
 </figure>
 
+<table>
+	<tr>
+		<td>col 1</td>
+		<td>col 2</td>
+		<td>col 3</td>
+
+	</tr>
+	<tr>
+		<td>col 1</td>
+		<td>col 2</td>
+		<td>col 3</td>
+
+	</tr>
+</table>
+
 <img src="" alt="" title="" width="" height="">
 
 
