--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title>Título aca locos</title>
+	<title>Felipe Manriquez CV</title>
 
 	<meta charset="UTF-8">
 	<meta name="description" content="descripción de la web">
@@ -12,62 +12,39 @@
 
 	</head>
 <body>
-<h1>TITULO H1</h1>
-<h2>TITULO H2</h2>
-<h3>TITULO H3</h3>
+<h1>Felipe Manriquez</h1>
+<h2>Diseñador gráfico</h2><br>
+<img src="http://placehold.it/200x100" alt="Foto FMV" title="FMV" width="200" height="100">
 
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<h3>Extracto</h3>
 
 
-<a href="http://google.cl">HOLIE</a>
+<p>Diseñador gráfico de la Universidad del Desarrollo. Creativo con experiencia en áreas de marketing, manejando marcas tanto por el lado de experiencia en punto de venta como en desarrollo de material gráfico para distintos soportes, audiovisual, web e impresos. Dominio avanzado de inglés.</p>
 
+<p>· 1er Lugar concurso diseño Danone-Activia</p>
+
+<h3>Experiencia</h3>
+<h4>Diseño y Marketing</h4>
+<h5><p>Calper Footwear & Uniforms</p></h5>
+<p>Encargado de marketing online y diseño gráfico.</p>
+
+<h4>Diseño gráfico</h4>
+<h5>Juegos de video Latinoamérica</h5>
+<p>Diseño de tiendas para Nintendo y Beats Headphones</p>
+<p>Material POP, diseño para marketing, diseño web</p>
+
+<h4>Diseño gráfico</h4>
+<h5>Indigo Arq</h5>
+<p>Diseño gráfico y soportes para marketing para diferentes empresas del área automotriz, Fiat, Toyota, Chrysler. Ssangyong, entre otros.</p>
+
+<h3>Software</h3>
 <ul>
-<li>Asdf</li>
+<li>Photoshop</li>
+<li>Illustrator</li>
+<li>InDesign</li>
+<li>FinalCut</li>
 </ul>
-<ol>
-	<li>
-		
-	</li>
-</ol>
-
-
-<figure>
-	<img src="">
-	<figcaption></figcaption>
-</figure>
-
-<table>
-	<tr>
-		<td>col 1</td>
-		<td>col 2</td>
-		<td>col 3</td>
-
-	</tr>
-	<tr>
-		<td>col 1</td>
-		<td>col 2</td>
-		<td>col 3</td>
-
-	</tr>
-</table>
-
-<img src="" alt="" title="" width="" height="">
-
-
-
 
 
 </body>
