Con links funcionando

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
 <body>
 <h1>Felipe Manriquez</h1>
 <h2>Diseñador gráfico</h2><br>
-<img src="http://placehold.it/200x100" alt="Foto FMV" title="FMV" width="200" height="100">
+<img src="http://placehold.it/200x200" alt="Foto FMV" title="FMV" width="200" height="200">
 
+<br>
+<br>
+<a href="formulario_fman.html">Contacto</a>
 
 <h3>Extracto</h3>
 
@@ -30,7 +33,7 @@
 <p>Encargado de marketing online y diseño gráfico.</p>
 
 <h4>Diseño gráfico</h4>
-<h5>Juegos de video Latinoamérica</h5>
+<h5>Nintendo: Juegos de video Latinoamérica</h5>
 <p>Diseño de tiendas para Nintendo y Beats Headphones</p>
 <p>Material POP, diseño para marketing, diseño web</p>
 
