--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
 	<meta name="keywords seo" content="HTML,CSS,XML,JavaScript">
 <!-- /OLDSCHOOL SEO, YA NO SE USA -->
 
+	<meta property=”og:title” content=”CV fman” />
+	<meta property=”og:url” content=”https://felipemanriquez.github.io/html_test_fman/” />
+	<meta property=”og:type” content=”website” />
+
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-82777508-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+
 	</head>
 <body>
 <h1>Felipe Manriquez</h1>
