faltaba og:images y og:desc

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<meta property=”og:title” content=”CV fman” />
 	<meta property=”og:url” content=”https://felipemanriquez.github.io/html_test_fman/” />
 	<meta property=”og:type” content=”website” />
+	<meta property=”og:image” content=”http://placehold.it/200x200” />
+	<meta property=”og:description” content=”Elterribledecv.” />
 
 
 
