--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	<meta property=”og:url” content=”https://felipemanriquez.github.io/html_test_fman/” />
 	<meta property=”og:type” content=”website” />
 	<meta property=”og:image” content=”http://placehold.it/200x200” />
-	<meta property=”og:description” content=”Elterribledecv.” />
-
+	<meta property="og:description" content="el terrible de cv" />
 
 
 <script>
